--- a/code/app/src/main/res/layout/activity_sign_in.xml
+++ b/code/app/src/main/res/layout/activity_sign_in.xml
@@ -26,7 +26,7 @@
         android:id="@+id/emailOrPhone"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:hint="Email or Phone"
+        android:hint="Email"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
