Added tags to the edit event page

--- a/code/app/src/main/res/layout/event_creation.xml
+++ b/code/app/src/main/res/layout/event_creation.xml
@@ -286,7 +286,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="Event Tags (Optional)"
+                    android:text="Event Tags"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
