--- a/code/app/src/main/res/layout/organizer_dashboard_empty.xml
+++ b/code/app/src/main/res/layout/organizer_dashboard_empty.xml
@@ -74,7 +74,8 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingTop="10dp">
 
             <!-- Events List (shown when there are events) -->
             <ScrollView
