--- a/code/app/src/main/res/layout/admin_profiles.xml
+++ b/code/app/src/main/res/layout/admin_profiles.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text=""
+            android:text="Profiles"
             android:textColor="@color/black"
             android:textSize="28sp"
             android:textStyle="bold" />
