--- a/code/app/src/main/res/layout/admin_dashboard.xml
+++ b/code/app/src/main/res/layout/admin_dashboard.xml
@@ -36,7 +36,8 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingTop="10dp">
 
             <!-- Events List (shown when there are events) -->
             <ScrollView
