--- a/code/app/src/main/res/layout/admin_tab.xml
+++ b/code/app/src/main/res/layout/admin_tab.xml
@@ -88,44 +88,6 @@
             android:textSize="12sp" />
     </LinearLayout>
 
-
-    <!-- Organizers -->
-    <LinearLayout
-        android:id="@+id/organizers_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/organizers_icon_card"
-            android:layout_width="64dp"
-            android:layout_height="32dp"
-            android:layout_marginBottom="4dp"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:strokeWidth="0dp"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="0dp">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:src="@drawable/organizers_icon" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Organizers"
-            android:textColor="#494949"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-
     <!-- Entrants -->
     <LinearLayout
         android:id="@+id/profiles_icon"
@@ -156,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Entrants"
+            android:text="Profiles"
             android:textColor="#494949"
             android:textSize="12sp" />
     </LinearLayout>
