--- a/code/app/src/main/res/layout/admin_user_details.xml
+++ b/code/app/src/main/res/layout/admin_user_details.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:text=""
+                android:text="Profile"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="24sp"
