--- a/code/app/src/main/res/layout/entrant_tab.xml
+++ b/code/app/src/main/res/layout/entrant_tab.xml
@@ -148,8 +148,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:src="@drawable/notifications_icon" />
 
@@ -199,11 +199,56 @@
             android:text="QR Reader"
             android:textColor="#494949"
             android:textSize="12sp" />
+
     </LinearLayout>
 
     <!-- Spacer -->
 
     <!-- Logout -->
+
+    <LinearLayout
+        android:id="@+id/invitations_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:src="@drawable/invitations_icon" />
+
+            <TextView
+                android:id="@+id/invitations_badge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="@drawable/badge_background_red"
+                android:paddingLeft="6dp"
+                android:paddingTop="2dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="2dp"
+                android:textColor="@android:color/white"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+        </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Event Invites"
+            android:textColor="#494949"
+            android:textSize="12sp" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
