--- a/code/app/src/main/res/layout/entrant_tab.xml
+++ b/code/app/src/main/res/layout/entrant_tab.xml
@@ -184,7 +184,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="24dp">
 
         <ImageView
             android:layout_width="24dp"
@@ -201,10 +202,6 @@
             android:textSize="12sp" />
 
     </LinearLayout>
-
-    <!-- Spacer -->
-
-    <!-- Logout -->
 
     <LinearLayout
         android:id="@+id/invitations_icon"
@@ -249,11 +246,13 @@
             android:textSize="12sp" />
     </LinearLayout>
 
+    <!-- Spacer -->
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <!-- Logout -->
     <LinearLayout
         android:id="@+id/logout_icon"
         android:layout_width="wrap_content"
