--- a/code/app/src/main/res/layout/entrant_event_details.xml
+++ b/code/app/src/main/res/layout/entrant_event_details.xml
@@ -132,6 +132,14 @@
                 android:textColor="@android:color/black" />
         </LinearLayout>
 
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/eventMapLocationView"
+            android:layout_width="match_parent"
+            android:layout_height="166dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp" />
+
         <!-- Event Description -->
         <LinearLayout
             android:layout_width="match_parent"
