--- a/code/app/src/main/res/layout/notification_invite.xml
+++ b/code/app/src/main/res/layout/notification_invite.xml
@@ -77,7 +77,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/notificationMessage"
-            tools:text="⏰💣 Respond within 24 hours" />
+            tools:text="💣 Please Respond" />
 
         <!-- Action Buttons -->
         <LinearLayout
