--- a/code/app/src/main/res/layout/organizer_event_cards.xml
+++ b/code/app/src/main/res/layout/organizer_event_cards.xml
@@ -39,17 +39,15 @@ app:cardElevation="2dp">
         android:shadowDy="2"
         android:shadowRadius="4" />
 
-    <Button
+    <ImageView
         android:id="@+id/edit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:text="Edit"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/theme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/ic_edit"
+        android:layout_gravity="right"
+        app:tint="@android:color/white"/>
 </FrameLayout>
 
 </androidx.cardview.widget.CardView>
