--- a/code/app/src/main/res/layout/organizer_dashboard_empty.xml
+++ b/code/app/src/main/res/layout/organizer_dashboard_empty.xml
@@ -30,7 +30,7 @@
             android:id="@+id/filterActivebutton"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginHorizontal="6dp"
+            android:layout_marginEnd="6dp"
             android:layout_weight="1"
             android:backgroundTint="@color/background_grey"
             android:text="Active"
@@ -42,7 +42,7 @@
             android:id="@+id/filterClosedButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginHorizontal="6dp"
+            android:layout_marginEnd="6dp"
             android:layout_weight="1"
             android:backgroundTint="@color/background_grey"
             android:text="Closed"
@@ -54,10 +54,10 @@
             android:id="@+id/filterOngoingButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginHorizontal="6dp"
+            android:layout_marginEnd="6dp"
             android:layout_weight="1"
             android:backgroundTint="@color/background_grey"
-            android:text="Ongoing"
+            android:text="On"
             android:textColor="@color/text_color"
             android:padding="0dp"
             app:cornerRadius="8dp"/>
@@ -122,6 +122,24 @@
                     android:text="Create Event"
                     app:backgroundTint="@color/light_purple"
                     app:cornerRadius="16dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/empty_state_filtered"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:text="No events matching filters."
+                    android:textAlignment="center"
+                    android:textColor="#494949"
+                    android:textSize="16sp" />
             </LinearLayout>
 
         </FrameLayout>
