Entrant event details now tells you if you have been invited or joined

--- a/code/app/src/main/res/layout/entrant_event_details.xml
+++ b/code/app/src/main/res/layout/entrant_event_details.xml
@@ -254,6 +254,28 @@
                 android:drawableLeft="@drawable/leave"
                 android:text="Leave Waitlist"
                 android:textColor="@color/light_purple" />
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/acceptedWaitlistButton"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_weight="1"
+                android:backgroundTint="#EEE6FB"
+                android:text="You have joined the event"
+                android:enabled="false"
+                android:textColor="@color/light_purple" />
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/invitedWaitlistButton"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_weight="1"
+                android:backgroundTint="#EEE6FB"
+                android:text="You have been invited"
+                android:enabled="false"
+                android:textColor="@color/light_purple" />
         </LinearLayout>
 
         <LinearLayout
