--- a/code/app/src/main/res/values/themes.xml
+++ b/code/app/src/main/res/values/themes.xml
@@ -4,6 +4,9 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:editTextColor">@android:color/black</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+    </style>
     <style name="Theme.AtlasEvents" parent="Base.Theme.AtlasEvents" />
 </resources>
